// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-salarié > ATMP 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2269
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2219
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2223
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > JEI 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3441
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > JEI 2`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 26455
salarié . rémunération . net . payé après impôt: 10995
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > activité partielle 1`] = `
"salarié . contrat . salaire brut: 1560
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 141
salarié . rémunération . net . payé après impôt: 1404
salarié . rémunération . net . à payer avant impôt: 1404

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > activité partielle 2`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2118
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > activité partielle 3`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1940
salarié . rémunération . net . payé après impôt: 3800
salarié . rémunération . net . à payer avant impôt: 4484"
`;

exports[`calculate simulations-salarié > activité partielle 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1615
salarié . rémunération . net . payé après impôt: 2271
salarié . rémunération . net . à payer avant impôt: 2404"
`;

exports[`calculate simulations-salarié > activité partielle 5`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2735
salarié . rémunération . net . payé après impôt: 2471
salarié . rémunération . net . à payer avant impôt: 2680"
`;

exports[`calculate simulations-salarié > activité partielle 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: 3750
salarié . coût total employeur: 740
salarié . rémunération . net . payé après impôt: 1762
salarié . rémunération . net . à payer avant impôt: 1800"
`;

exports[`calculate simulations-salarié > activité partielle 7`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2220
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > aides 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2301
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 2`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12811
salarié . rémunération . net . payé après impôt: 7739
salarié . rémunération . net . à payer avant impôt: 8912

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > aides 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1834
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2441
salarié . rémunération . net . payé après impôt: 1682
salarié . rémunération . net . à payer avant impôt: 1720

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > apprentissage 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1132
salarié . rémunération . net . payé après impôt: 1353
salarié . rémunération . net . à payer avant impôt: 1353

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > apprentissage 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3162
salarié . rémunération . net . payé après impôt: 2145
salarié . rémunération . net . à payer avant impôt: 2145"
`;

exports[`calculate simulations-salarié > atmp 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2309
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > avantages 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2439
salarié . rémunération . net . payé après impôt: 1518
salarié . rémunération . net . à payer avant impôt: 1540"
`;

exports[`calculate simulations-salarié > avantages 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2449
salarié . rémunération . net . payé après impôt: 1517
salarié . rémunération . net . à payer avant impôt: 1539"
`;

exports[`calculate simulations-salarié > avantages 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2370
salarié . rémunération . net . payé après impôt: 1526
salarié . rémunération . net . à payer avant impôt: 1548"
`;

exports[`calculate simulations-salarié > cadre 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4117
salarié . rémunération . net . payé après impôt: 2215
salarié . rémunération . net . à payer avant impôt: 2348"
`;

exports[`calculate simulations-salarié > cadre 2`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 11566
salarié . rémunération . net . payé après impôt: 5023
salarié . rémunération . net . à payer avant impôt: 6233"
`;

exports[`calculate simulations-salarié > cdd 1`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3066
salarié . rémunération . net . payé après impôt: 1838
salarié . rémunération . net . à payer avant impôt: 1894

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 2`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3341
salarié . rémunération . net . payé après impôt: 1935
salarié . rémunération . net . à payer avant impôt: 2009

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 3`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3625
salarié . rémunération . net . payé après impôt: 2122
salarié . rémunération . net . à payer avant impôt: 2197

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 4`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4408
salarié . rémunération . net . payé après impôt: 2241
salarié . rémunération . net . à payer avant impôt: 2375

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 5`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3586
salarié . rémunération . net . payé après impôt: 1815
salarié . rémunération . net . à payer avant impôt: 1871

Notifications affichées : salarié . convention collective . avertissement convention collective, salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > contrat pro 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1567
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > contrat pro 2`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1567
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > effectif 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2251
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2262
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2273
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2273
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2076
salarié . rémunération . net . payé après impôt: 1584
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2127
salarié . rémunération . net . payé après impôt: 1577
salarié . rémunération . net . à payer avant impôt: 1577"
`;

exports[`calculate simulations-salarié > frais pro - DFS 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2076
salarié . rémunération . net . payé après impôt: 1584
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2076
salarié . rémunération . net . payé après impôt: 1584
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2251
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 6`] = `
"salarié . contrat . salaire brut: 1700
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1776
salarié . rémunération . net . payé après impôt: 1312
salarié . rémunération . net . à payer avant impôt: 1312

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > frais pro - DFS 7`] = `
"salarié . contrat . salaire brut: 2600
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3117
salarié . rémunération . net . payé après impôt: 2107
salarié . rémunération . net . à payer avant impôt: 2107"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4383
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4998
salarié . rémunération . net . payé après impôt: 2700
salarié . rémunération . net . à payer avant impôt: 2924"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4689
salarié . rémunération . net . payé après impôt: 2695
salarié . rémunération . net . à payer avant impôt: 2836"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2412
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5091
salarié . rémunération . net . payé après impôt: 3122
salarié . rémunération . net . à payer avant impôt: 3261"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2412
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4357
salarié . rémunération . net . payé après impôt: 2388
salarié . rémunération . net . à payer avant impôt: 2527"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4064
salarié . rémunération . net . payé après impôt: 2531
salarié . rémunération . net . à payer avant impôt: 2586"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4078
salarié . rémunération . net . payé après impôt: 2527
salarié . rémunération . net . à payer avant impôt: 2583"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2291
salarié . rémunération . net . payé après impôt: 1513
salarié . rémunération . net . à payer avant impôt: 1521"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4291
salarié . rémunération . net . payé après impôt: 2009
salarié . rémunération . net . à payer avant impôt: 2141"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2335
salarié . rémunération . net . payé après impôt: 1485
salarié . rémunération . net . à payer avant impôt: 1493"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4383
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4383
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4996
salarié . rémunération . net . payé après impôt: 2695
salarié . rémunération . net . à payer avant impôt: 2919"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4383
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 5`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4358
salarié . rémunération . net . payé après impôt: 2389
salarié . rémunération . net . à payer avant impôt: 2528"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 6`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4246
salarié . rémunération . net . payé après impôt: 2505
salarié . rémunération . net . à payer avant impôt: 2564"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2348
salarié . rémunération . net . payé après impôt: 1628
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2309
salarié . rémunération . net . payé après impôt: 1598
salarié . rémunération . net . à payer avant impôt: 1606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2378
salarié . rémunération . net . payé après impôt: 1628
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2348
salarié . rémunération . net . payé après impôt: 1607
salarié . rémunération . net . à payer avant impôt: 1616

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2316
salarié . rémunération . net . payé après impôt: 1581
salarié . rémunération . net . à payer avant impôt: 1589

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 6`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2298
salarié . rémunération . net . payé après impôt: 1592
salarié . rémunération . net . à payer avant impôt: 1601

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 7`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2917
salarié . coût total employeur: 3331
salarié . rémunération . net . payé après impôt: 1919
salarié . rémunération . net . à payer avant impôt: 1919

Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2692
salarié . coût total employeur: 3224
salarié . rémunération . net . payé après impôt: 1889
salarié . rémunération . net . à payer avant impôt: 1889

Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2303
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 1970
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 5`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2214
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 6`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12890
salarié . rémunération . net . payé après impôt: 6284
salarié . rémunération . net . à payer avant impôt: 7150"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 7`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12890
salarié . rémunération . net . payé après impôt: 6731
salarié . rémunération . net . à payer avant impôt: 7150"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 8`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12890
salarié . rémunération . net . payé après impôt: 6970
salarié . rémunération . net . à payer avant impôt: 7150"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 9`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2226
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 11`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28434
salarié . rémunération . net . payé après impôt: 13068
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 12`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28434
salarié . rémunération . net . payé après impôt: 11347
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 2`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42306
salarié . rémunération . net . payé après impôt: 15769
salarié . rémunération . net . à payer avant impôt: 23970

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4510
salarié . rémunération . net . payé après impôt: 2451
salarié . rémunération . net . à payer avant impôt: 2590

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3627
salarié . rémunération . net . payé après impôt: 2282
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 5`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42306
salarié . rémunération . net . payé après impôt: 15769
salarié . rémunération . net . à payer avant impôt: 23970

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2570
salarié . rémunération . net . à payer avant impôt: 2626"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 7`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42306
salarié . rémunération . net . payé après impôt: 17838
salarié . rémunération . net . à payer avant impôt: 26707

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 8`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2107
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > inversions 1`] = `
"salarié . contrat . salaire brut: 1867
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1456
salarié . rémunération . net . à payer avant impôt: 1456"
`;

exports[`calculate simulations-salarié > inversions 2`] = `
"salarié . contrat . salaire brut: 2554
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3294
salarié . rémunération . net . payé après impôt: 1927
salarié . rémunération . net . à payer avant impôt: 2000"
`;

exports[`calculate simulations-salarié > inversions 3`] = `
"salarié . contrat . salaire brut: 2667
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3508
salarié . rémunération . net . payé après impôt: 2000
salarié . rémunération . net . à payer avant impôt: 2090"
`;

exports[`calculate simulations-salarié > lodeom 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1589
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2082
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3627
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5430
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > lodeom 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7788
salarié . rémunération . net . payé après impôt: 3719
salarié . rémunération . net . à payer avant impôt: 4343"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1589
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2082
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3113
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4641
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7788
salarié . rémunération . net . payé après impôt: 3719
salarié . rémunération . net . à payer avant impôt: 4343"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1589
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2082
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3113
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4452
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7350
salarié . rémunération . net . payé après impôt: 3719
salarié . rémunération . net . à payer avant impôt: 4343"
`;

exports[`calculate simulations-salarié > stage 1`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 500
salarié . rémunération . net . payé après impôt: 500
salarié . rémunération . net . à payer avant impôt: 500

Notifications affichées : salarié . contrat . stage . avertissement, salarié . contrat . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié > stage 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2460
salarié . rémunération . net . payé après impôt: 1762
salarié . rémunération . net . à payer avant impôt: 1762

Notifications affichées : salarié . contrat . stage . avertissement"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1602
salarié . rémunération . net . payé après impôt: 1195
salarié . rémunération . net . à payer avant impôt: 1195

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3214
salarié . rémunération . net . payé après impôt: 1906
salarié . rémunération . net . à payer avant impôt: 1979"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 3`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1589
salarié . rémunération . net . payé après impôt: 1170
salarié . rémunération . net . à payer avant impôt: 1170

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 4`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3178
salarié . rémunération . net . payé après impôt: 1879
salarié . rémunération . net . à payer avant impôt: 1938"
`;

exports[`calculate simulations-salarié > temps partiel 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2188
salarié . coût total employeur: 2383
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > temps partiel 2`] = `
"salarié . contrat . salaire brut: 1857
salarié . contrat . salaire brut . équivalent temps plein: 2500
salarié . coût total employeur: 2377
salarié . rémunération . net . payé après impôt: 1448
salarié . rémunération . net . à payer avant impôt: 1448"
`;

exports[`calculate simulations-salarié > temps partiel 3`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: 1750
salarié . coût total employeur: 1051
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle, salarié . contrat . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié > treizième mois 1`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3177
salarié . rémunération . net . payé après impôt: 1879
salarié . rémunération . net . à payer avant impôt: 1950"
`;

exports[`calculate simulations-salarié > treizième mois 2`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: 3096
salarié . coût total employeur: 3770
salarié . rémunération . net . payé après impôt: 2088
salarié . rémunération . net . à payer avant impôt: 2176"
`;

exports[`calculate simulations-salarié > échelle de salaires 1`] = `
"salarié . contrat . salaire brut: 100
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 123
salarié . rémunération . net . payé après impôt: 57
salarié . rémunération . net . à payer avant impôt: 57

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 2`] = `
"salarié . contrat . salaire brut: 250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 278
salarié . rémunération . net . payé après impôt: 176
salarié . rémunération . net . à payer avant impôt: 176

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 3`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 536
salarié . rémunération . net . payé après impôt: 374
salarié . rémunération . net . à payer avant impôt: 374

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 4`] = `
"salarié . contrat . salaire brut: 750
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 793
salarié . rémunération . net . payé après impôt: 572
salarié . rémunération . net . à payer avant impôt: 572

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 5`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1051
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 6`] = `
"salarié . contrat . salaire brut: 1250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1309
salarié . rémunération . net . payé après impôt: 968
salarié . rémunération . net . à payer avant impôt: 968

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 7`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1567
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2251
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > échelle de salaires 9`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3192
salarié . rémunération . net . payé après impôt: 1885
salarié . rémunération . net . à payer avant impôt: 1957"
`;

exports[`calculate simulations-salarié > échelle de salaires 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4071
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > échelle de salaires 11`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5430
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > échelle de salaires 12`] = `
"salarié . contrat . salaire brut: 5000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7082
salarié . rémunération . net . payé après impôt: 3375
salarié . rémunération . net . à payer avant impôt: 3942"
`;

exports[`calculate simulations-salarié > échelle de salaires 13`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 14320
salarié . rémunération . net . payé après impôt: 6243
salarié . rémunération . net . à payer avant impôt: 7952

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 14`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28434
salarié . rémunération . net . payé après impôt: 10995
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 15`] = `
"salarié . contrat . salaire brut: 100000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 129268
salarié . rémunération . net . payé après impôt: 46391
salarié . rémunération . net . à payer avant impôt: 86762

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 16`] = `
"salarié . contrat . salaire brut: 1000000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1244692
salarié . rémunération . net . payé après impôt: 446243
salarié . rémunération . net . à payer avant impôt: 895862

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;
